<resources>
    <string name="app_name">Trivia App</string>
    <string name="user_name">What is your name?</string>
    <string name="hint_name">Name</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="button_history">History</string>
    <string name="text_summary">Summary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>